--- a/app/globals.css
+++ b/app/globals.css
@@ -20,37 +20,27 @@
 	--color-5: rgb(50, 150, 255);
 	--color-6: white;
 
-	--style-font-1: 'Amatic SC', 'Oswald', 'Patrick Hand', serif;
-	--style-font-2: 'Oswald', sans-serif;
-	--font-size-sm: 0.6rem;
-	--font-size-md: 1.2rem;
-	--font-size-lg: 1.4rem;
-	--font-size-toc: 1.4rem;
-	--font-size-toc-sm: 0.9rem;
-
+	--style-font-1: 'Orbitron', 'Exo 2', sans-serif;
+	--style-font-2: 'Exo 2', 'Orbitron', sans-serif;
+	--font-size-sm: 0.8rem;
+	--font-size-md: 1rem;
+	--font-size-lg: 1.2rem;
+	--font-size-toc: 0.9rem;
+	--font-size-toc-sm: 0.5rem;
 	--font-weight-norm: 200;
-	--font-weight-bold: 800;
-	--radius: 0;
-	--rotate-1: 1deg;
-	--rotate-2: 2deg;
-	--rotate-4: 4deg;
-	--rotate-6: 6deg;
-	--alt-rotate-1: -1deg;
-	--alt-rotate-2: -2deg;
-	--alt-rotate-4: -4deg;
-	--alt-rotate-6: -6deg;
-	--big-rotate: 30deg;
-	--alt-big-rotate: -30deg;
-	--translate-x-1: -4rem;
-	--translate-x-2: -9rem;
-	--translate-y-1: 14rem;
-	--translate-y-2: 13rem;
-	--translate-y-3: 20rem;
-	--translate-y-4: 8rem;
-	--icon-position: absolute;
-	--zero: 0rem;
+	--font-weight-bold: 600;
+	--radius: 0.4rem;
+	--rotate-1: 0deg;
+	--rotate-2: 0deg;
+	--rotate-4: 0deg;
+	--rotate-6: 0deg;
 
-	--lander-width: 80%;
+	--alt-rotate-1: 0deg;
+	--alt-rotate-2: 0deg;
+	--alt-rotate-4: 0deg;
+	--alt-rotate-6: 0deg;
+	--lander-width: 100%;
+	--icon-position: relative;
 }
 
 .spaceship {
@@ -183,18 +173,30 @@ button {
 .style-2 {
 	font-family: var(--style-font-2);
 }
-.thin {
-	font-weight: 200;
-}
 .left-align {
 	text-align: left;
 }
+
+.thin {
+	font-weight: 200;
+}
+
 .mid {
 	font-weight: 400;
 }
 .thick,
 .bold {
 	font-weight: 800;
+}
+
+.font-small {
+	font-size: var(--font-size-sm);
+}
+.font-mid {
+	font-size: var(--font-size-md);
+}
+.font-large {
+	font-size: var(--font-size-lg);
 }
 .relative {
 	position: relative;
