--- a/app/globals.css
+++ b/app/globals.css
@@ -153,6 +153,19 @@ button {
 .fixed {
 	position: fixed;
 }
+.absolute-center {
+	top: 50%;
+	left: 45%;
+}
+.z10 {
+	z-index: 10;
+}
+.absolute {
+	position: absolute;
+}
+.relative {
+	position: relative;
+}
 .top {
 	top: 0;
 }
