--- a/app/globals.css
+++ b/app/globals.css
@@ -14,10 +14,10 @@
 }
 .default {
 	--color-1: white;
-	--color-2: white;
-	--color-3: rgb(40, 40, 170);
-	--color-4: rgb(80, 60, 205);
-	--color-5: rgb(50, 150, 255);
+	--color-2: rgb(0, 0, 40);
+	--color-3: rgb(220, 200, 100);
+	--color-4: rgb(23, 23, 117);
+	--color-5: rgb(220, 220, 255);
 	--color-6: white;
 
 	--style-font-1: 'Orbitron', 'Exo 2', sans-serif;
@@ -77,10 +77,10 @@
 @media (prefers-color-scheme: dark) {
 	.default {
 		--color-1: rgb(0, 0, 0);
-		--color-2: rgb(129, 222, 245);
-		--color-3: rgb(80, 80, 250);
-		--color-4: rgb(40, 40, 80);
-		--color-5: rgb(20, 20, 40);
+		--color-2: rgb(229, 222, 245);
+		--color-3: rgb(150, 150, 30);
+		--color-4: rgb(20, 20, 60);
+		--color-5: rgb(10, 20, 40);
 		--color-6: rgb(0, 0, 0);
 		--semi-transparent: 70%;
 		--medium-transparent: 55%;
@@ -160,6 +160,9 @@ button {
 .z10 {
 	z-index: 10;
 }
+.undisplayed {
+	display: none;
+}
 .absolute {
 	position: absolute;
 }
@@ -213,6 +216,9 @@ button {
 }
 .font-large {
 	font-size: var(--font-size-lg);
+}
+.font-banner {
+	font-size: 3rem;
 }
 .relative {
 	position: relative;
@@ -310,8 +316,6 @@ button {
 
 /*layout*/
 .main {
-	display: flex;
-	flex-direction: column;
 	min-height: 100vh;
 	padding: 3rem 3rem 4.5rem 3rem;
 	color: var(--color-2);
@@ -320,6 +324,7 @@ button {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
 }
+
 .row {
 	display: flex;
 	gap: 1rem;
@@ -328,7 +333,7 @@ button {
 	height: 50%;
 }
 .width-half {
-	width: 50%;
+	width: 47%;
 }
 .height-full {
 	height: 100%;
