--- a/app/globals.css
+++ b/app/globals.css
@@ -90,7 +90,8 @@ body {
 	background-repeat: no-repeat;
 	background-position: center;
 	min-height: 550px;
-	min-width: 650px;
+	min-width: 450px;
+	width: 650px;
 }
 /* Rudi */
 
