--- a/app/globals.css
+++ b/app/globals.css
@@ -86,12 +86,11 @@ body {
 /* Rudi */
 .hero {
 	background: url('../public/photos/lot_photo_1.png');
-	background-size: contain;
+	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	min-height: 550px;
-	min-width: 450px;
-	width: 650px;
+	min-height: 100vh;
+	min-width: 90vw;
 }
 /* Rudi */
 
